feat: fix to list